# hackage-matrix-builder

./: .gitignore  .gitmodules  .travis.yml  ChangeLog.md  Makefile  README.md  cabal.project  hackage-matrix-builder.cabal  hackage-matrix-builder3.cabal  style.2.css  style.css  tables.sql
frontend/src/: WorkerApi.purs  WorkerApi2.purs
purescript/: .gitignore  bower.json  build.sh  install-deps.sh
purescript-halogen/: .gitignore  bower.json  package.json
purescript-halogen/src/: Container.purs  Main.purs  Menu.hs  Router.purs
purescript-halogen/src/Components/: PageError.purs  PageHome.purs  PageLatest.purs  PagePackage.purs  PagePackages.purs  PageUser.purs
purescript-halogen/src/Lib/: Matrix.js  Matrix.purs  MiscFFI.js  MiscFFI.purs  Types.purs  Undefined.purs
purescript/src/: #Main.purs#  Main.purs  Matrix.js  Matrix.purs  MiscFFI.js  MiscFFI.purs  Types.purs  Undefined.purs  Uri.js  Uri.purs
src/: Api.hs  BuildReport.hs  BuildTypes.hs  Builder.hs  Common.hs  Config.hs  Counter.hs  Generate.hs  Identifiers.hs  IndexHelper.hs  Main.hs  MainWorker.hs  Paths.hs  PkgId.hs  Queue.hs  QueueCli.hs  Tag.hs  WebServer.hs  hackage-matrix-builder.hs  hackage-matrix-html-index.hs  hackage-matrix-html-report.hs
src-exe/: MainController.hs  MainWorker.hs  MainWorkerClient.hs
src-exe/Controller/: Api.hs  Badge.hs  Cli.hs  Compute.hs  Config.hs  Db.hs  Main.hs  Scheduler.hs  Types.hs  Util.hs  WebSvc.hs
src-exe/Worker/: PkgIndex.hs
src-exe/builder/: Main.hs
src-exe/queue/: Main.hs
src-exe/web/: Web.hs
src-lib/: HackageApi.hs  IndexHelper.hs  Job.hs  Log.hs  PkgId.hs  PkgIdxRanges.hs  PkgIdxTsSet.hs  PlanJson.hs  WorkerApi.hs
src-lib/HackageApi/: Client.hs
src-lib/Prelude/: Local.hs
src-lib/Util/: WebSvc.hs
src-lib/WorkerApi/: Client.hs
src-servant-purs/: Main.hs
src-sql/: functions.sql  tables.sql
src-test/: Test.hs
src-ui/: .gitignore  Makefile  bower.json  package.json
src-ui.v2/: bower.json  package.json
src-ui.v2/src/: Container.purs  Main.purs
src-ui.v2/src/Components/: PageError.purs  PageHome.purs  PageLatest.purs  PagePackage.purs  PagePackages.purs  PageUser.purs
src-ui.v2/src/Lib/: MiscFFI.js  MiscFFI.purs
src-ui.v3/: .gitignore  Makefile  README.md  cabal.project  matrix-ui.cabal  patch
src-ui.v3/src/: API.hs  Main.hs  PkgId.hs  Router.hs
src-ui/src/: Container.purs  Main.purs
src-ui/src/Components/: PageLatest.purs  PagePackage.purs  PagePackages.purs  PageUser.purs
src-ui/src/Lib/: Matrix.js  Matrix.purs  Matrix2.purs  MatrixParser.purs  MiscFFI.js  MiscFFI.purs  Types.purs  Uri.purs
src/Api/: Package.hs  Queue.hs  Root.hs  Tag.hs  Types.hs  User.hs  Utils.hs
src/Api/Package/: Report.hs
src/Api/Package/Report/: Cell.hs
src/Db/: Queue.hs  UUID.hs
src/Types/: Queue.hs
ui/: api.js  index.html  purescript.js  style.css  ui.js  uri.js
ui.v2/: config.js  index.html  style.css
ui.v3/: index.html  style.css
worker-setup/: Dockerfile  base.Dockerfile  build.sh  worker.conf  xghc-7.x
worker-setup/worker/: Dockerfile  worker.conf  xghc-8.x
worker-setup/worker-base/: Dockerfile
