name:                hackage-matrix-builder
version:             0.2.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
homepage:            https://github.com/hvr/hackage-matrix-builder
bug-reports:         https://github.com/hvr/hackage-matrix-builder/issues
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: https://github.com/hvr/hackage-matrix-builder.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    StandaloneDeriving
    ViewPatterns

  exposed-modules:
    Api
    Api.Package
    Api.Package.Report
    Api.Queue
    Api.Root
    Api.Types
    Api.Utils
    BuildReport
    BuildTypes
    Builder
    Config
    Db.Queue
    Generate
    Queue
    QueueCli
    Paths
    Types.Queue
    WebServer

  build-depends:
    aeson              >=0.8  && <0.9,
    aeson-utils        >=0.3  && <0.4,
    base               >=4.8  && <4.9,
    base16-bytestring  >=0.1  && <0.2,
    bifunctors         >=4.2  && <4.3,
    binary             >=0.7  && <0.8,
    blaze-builder      >=0.3  && <0.5,
    bytestring         >=0.10 && <0.11,
    containers         >=0.5  && <0.6,
    cryptohash         >=0.11 && <0.12,
    deepseq            >=1.4  && <1.5,
    directory          >=1.2  && <1.3,
    esqueleto          >=2.2  && <2.3,
    filepath           >=1.4  && <1.5,
    generic-aeson      >=0.2  && <0.3,
    happstack-server   >=7.4  && <7.5,
    hashable           >=1.2  && <1.3,
    json-schema        >=0.7  && <0.8,
    lens               >=4.9  && <4.10,
    monad-control      >=0.3  && <0.4,
    monad-logger       >=0.3  && <0.4,
    mtl                >=2.2  && <2.3,
    parsec             >=3.1  && <3.2,
    path               >=0.2  && <0.3,
    persistent         >=2.1  && <2.2,
    persistent-sqlite  >=2.1  && <2.2,
    persistent-template >=2.1 && <2.2,
    process            >=1.2  && <1.3,
    resourcet          >=1.1  && <1.2,
    rest-core          >=0.35 && <0.36,
    rest-gen           >=0.17 && <0.18,
    rest-happstack     >=0.2  && <0.3,
    rest-stringmap     >=0.2  && <0.3,
    safe               >=0.3  && <0.4,
    shake              >=0.15 && <0.16,
    split              >=0.2  && <0.3,
    string-conversions >=0.3  && <0.4,
    text               >=1.2  && <1.3,
    text-binary        >=0.1  && <0.2,
    time               >=1.5  && <1.6,
    tostring           >=0.2  && <0.3,
    transformers-base  >=0.4  && <0.5,
    xmlhtml            >=0.2  && <0.3

  ghc-options: -Wall

executable hackage-matrix-builder
  default-language: Haskell2010
  hs-source-dirs:   src-exe
  main-is:          builder/Main.hs
  build-depends:    base, hackage-matrix-builder
  ghc-options:      -threaded -Wall

executable hmb-queue-tool
  default-language: Haskell2010
  hs-source-dirs:   src-exe
  main-is:          queue/Main.hs
  build-depends:    base, hackage-matrix-builder
  ghc-options:      -threaded -Wall

executable web
  main-is:             Web.hs
  ghc-options:         -threaded -Wall
  hs-source-dirs:      src-exe/web
  default-language:    Haskell2010
  build-depends:
    base                   >=4.8  && <4.9,
    hackage-matrix-builder

executable web-gen
  main-is:             WebGen.hs
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src-exe/gen
  build-depends:       base, hackage-matrix-builder
