name:                hackage-matrix-builder
version:             0.2.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
homepage:            https://github.com/hvr/hackage-matrix-builder
bug-reports:         https://github.com/hvr/hackage-matrix-builder/issues
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

Source-Repository head
  Type:     git
  Location: https://github.com/hvr/hackage-matrix-builder.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    StandaloneDeriving
    ViewPatterns

  exposed-modules:
    Api
    Api.Package
    Api.Package.Report
    Api.Package.Report.Cell
    Api.Queue
    Api.Root
    Api.Tag
    Api.Types
    Api.User
    Api.Utils
    BuildReport
    BuildTypes
    Builder
    Config
    Generate
    Identifiers
    Queue
    QueueCli
    Paths
    Tag
    WebServer

  build-depends:
    aeson              >=0.8    && <1.1,
    aeson-utils        >=0.3    && <0.4,
    base               >=4.8    && <4.10,
    base16-bytestring  >=0.1    && <0.2,
    bifunctors         >=4.2    && <5.5,
    binary             >=0.7    && <0.9,
    blaze-builder      >=0.3    && <0.5,
    bytestring         >=0.10   && <0.11,
    conduit            >=1.2    && <1.3,
    conduit-extra      >=1.1    && <1.2,
    containers         >=0.5    && <0.6,
    cryptohash         >=0.11   && <0.12,
    deepseq            >=1.4    && <1.5,
    directory          >=1.2    && <1.3,
    exceptions         >=0.8    && <0.9,
    filepath           >=1.4    && <1.5,
    generic-aeson      >=0.2    && <0.3,
    generic-deriving   >=1.10   && <1.12,
    happstack-server   >=7.4    && <7.5,
    hashable           >=1.2    && <1.3,
    http-conduit       >=2.1.11 && <2.3,
    json-schema        >=0.7    && <0.8,
    lens               >=4.9    && <4.15,
    monad-control      >=1.0    && <1.1,
    mtl                >=2.2    && <2.3,
    parsec             >=3.1    && <3.2,
    path               >=0.2    && <0.6,
    process            >=1.2    && <1.5,
    rest-core          >=0.39   && <0.40,
    rest-gen           >=0.17   && <0.21,
    rest-happstack     >=0.2    && <0.4,
    resourcet          >=1.1    && <1.2,
    rest-stringmap     >=0.2    && <0.3,
    safe               >=0.3    && <0.4,
    shake              >=0.15   && <0.16,
    split              >=0.2    && <0.3,
    string-conversions >=0.3    && <0.5,
    text               >=1.2    && <1.3,
    text-binary        >=0.1    && <0.3,
    time               >=1.5    && <1.7,
    tostring           >=0.2    && <0.3,
    transformers       >=0.4    && <0.6,
    transformers-base  >=0.4    && <0.5,
    xmlhtml            >=0.2    && <0.3

  ghc-options: -Wall

executable hackage-matrix-builder
  default-language: Haskell2010
  hs-source-dirs:   src-exe
  main-is:          builder/Main.hs
  build-depends:    base, hackage-matrix-builder
  ghc-options:      -threaded -Wall

executable hmb-queue-tool
  default-language: Haskell2010
  hs-source-dirs:   src-exe
  main-is:          queue/Main.hs
  build-depends:    base, hackage-matrix-builder
  ghc-options:      -threaded -Wall

executable web
  main-is:             Web.hs
  ghc-options:         -threaded -Wall
  hs-source-dirs:      src-exe/web
  default-language:    Haskell2010
  build-depends:
    base                   >=4.8  && <4.10,
    hackage-matrix-builder

executable web-gen
  main-is:             WebGen.hs
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src-exe/gen
  build-depends:       base, hackage-matrix-builder
