cabal-version:       2.4
name:                hackage-matrix-builder3
version:             0.3

synopsis:            Hackage Matrix
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
tested-with:         GHC == 8.2.2

common defaults
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
  other-extensions:    TemplateHaskell
  mixins:              base hiding (Prelude)

  build-depends:
    , Cabal                ^>= 2.4.0.1
    , aeson                ^>= 1.1
    , async                ^>= 2.1.0
    , base                 ^>= 4.9 || ^>= 4.10
    , bytestring           ^>= 0.10.2
    , containers           ^>= 0.5.7.1
    , cryptohash-sha256    ^>= 0.11.100.1
    , deepseq              ^>= 1.4
    , directory            ^>= 1.3.0
    , filepath             ^>= 1.4.1.0
    , hashable             ^>= 1.2.4
    , http-client          ^>= 0.5.3
    , http-types           ^>= 0.9.1
    , io-streams           ^>= 1.3.6
    , lens                 ^>= 4.15
    , mtl                  ^>= 2.2.1
    , postgresql-simple    ^>= 0.5.2
    , process              ^>= 1.4 || ^>= 1.6.1
    , servant              ^>= 0.12
    , servant-client       ^>= 0.12
    , servant-client-core  ^>= 0.12
    , stm                  ^>= 2.4.4
    , swagger2             ^>= 2.1.5
    , tar                  ^>= 0.5
    , text                 ^>= 1.2
    , time                 ^>= 1.6 || ^>= 1.8
    , uuid-types           ^>= 1.0.3
    , vector               ^>= 0.12
    , Prelude              ^>= 0.1.0.1

library matrix-lib
  import: defaults

  hs-source-dirs:      src-lib
  exposed-modules:
      Prelude.Local
      IndexHelper
      Job
      Log
      PkgId
      PkgIdxTsSet
      PkgIdxRanges
      PlanJson
      WorkerApi
      WorkerApi.Client
      HackageApi
      HackageApi.Client
      Util.WebSvc

  -- non-locals
  build-depends:
    , vector-th-unbox      ^>= 0.2.1.6

----------------------------------------------------------------------------
-- tests

test-suite matrix-lib-test
  import: defaults

  type: exitcode-stdio-1.0
  hs-source-dirs:      src-test
  main-is: Test.hs

  build-depends:
    , matrix-lib

    , tasty                ^>= 0.11.2.5
    , tasty-quickcheck     ^>= 0.9.1

----------------------------------------------------------------------------
-- executables

common defaults-exe
  import: defaults
  ghc-options: -threaded -rtsopts
  hs-source-dirs: src-exe
  build-depends: matrix-lib

executable matrix-worker
  import: defaults-exe

  main-is: MainWorker.hs

  -- non-locals
  build-depends:
    , concurrent-extra     ^>= 0.7.0.10
    , config-value         ^>= 0.6
    , servant-snap         ^>= 0.8.1
    , snap                 ^>= 1
    , snap-core            ^>= 1.0.3.2
    , snap-server          ^>= 1
    , unix                 ^>= 2.7.2

-- mostly for testing
executable matrix-worker-client
  import: defaults-exe

  main-is: MainWorkerClient.hs

-- Single multi-command binary which orchestrates everything & provides WebUI
executable matrix-controller
  import: defaults-exe

  main-is: Controller/Main.hs

  other-modules:
      Controller.Api
      Controller.Cli
      Controller.Config
      Controller.Compute
      Controller.Db
      Controller.Scheduler
      Controller.WebSvc

  -- non-locals
  build-depends:
    , SafeSemaphore        ^>= 0.10.1
    , config-schema        ^>= 0.4.1
    , optparse-generic     ^>= 1.2
    , resource-pool        ^>= 0.2.3.2
    , servant-snap         ^>= 0.8.1
    , servant-swagger      ^>= 1.1.3
    , snap                 ^>= 1
    , snap-core            ^>= 1
    , snap-server          ^>= 1
    , unordered-containers ^>= 0.2.7.1
