cabal-version:       3.0
name:                hackage-matrix-builder3
version:             0.3

synopsis:            Hackage Matrix
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Network
tested-with:         GHC ==8.6.5 || ==8.4.4 || ==8.2.2 || ==8.0.2
description:
  This package contains the Hackage Matrix CI server backends
  powering http://matrix.hackage.haskell.org

extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/haskell-CI/hackage-matrix-builder.git


common defaults
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
  other-extensions:    TemplateHaskell
  mixins:              base hiding (Prelude)

  build-depends:
    , Cabal                ^>= 3.2.0.0
    , aeson                ^>= 1.4.3.0
    , async                ^>= 2.2.1
    , base                 ^>= { 4.9, 4.10, 4.11, 4.12 }
    , bytestring           ^>= 0.10.2
    , containers           ^>= 0.5.7.1 || ^>= 0.6.0.1
    , cryptohash-sha256    ^>= 0.11.100.1
    , deepseq              ^>= 1.4
    , directory            ^>= 1.3.0
    , filepath             ^>= 1.4.1.0
    , hashable             ^>= 1.2.4 || ^>= 1.3.0.0
    , http-types           ^>= 0.12.3
    , io-streams           ^>= 1.5.1.0
    , lens                 ^>= 4.17.1
    , mtl                  ^>= 2.2.1
    , postgresql-simple    ^>= 0.6
    , process              ^>= 1.4 || ^>= 1.6.1
    , servant              ^>= 0.16
    , servant-http-streams ^>= 0.16
    , servant-client-core  ^>= 0.16
    , stm                  ^>= 2.5.0.0
    , swagger2             ^>= 2.3.1.0
    , tar                  ^>= 0.5
    , text                 ^>= 1.2
    , time                 ^>= 1.6 || ^>= 1.8
    , uuid-types           ^>= 1.0.3
    , vector               ^>= 0.12
    , Prelude              ^>= 0.1.0.1

library matrix-lib
  import: defaults

  hs-source-dirs:      src-lib
  exposed-modules:
      Prelude.Local
      IndexHelper
      Job
      Log
      PkgId
      PkgIdxTsSet
      PkgIdxRanges
      PlanJson
      WorkerApi
      WorkerApi.Client
      HackageApi
      HackageApi.Client
      Util.WebSvc

  -- non-locals
  build-depends:
    , vector-th-unbox      ^>= 0.2.1.6

----------------------------------------------------------------------------
-- tests

test-suite matrix-lib-test
  import: defaults

  type: exitcode-stdio-1.0
  hs-source-dirs:      src-test
  main-is: Test.hs

  build-depends:
    , matrix-lib

    , tasty                ^>= 1.2.2
    , tasty-quickcheck     ^>= 0.10.1

----------------------------------------------------------------------------
-- executables

common defaults-exe
  import: defaults
  ghc-options: -threaded -rtsopts
  hs-source-dirs: src-exe
  build-depends: matrix-lib

executable matrix-worker
  import: defaults-exe

  main-is: MainWorker.hs
  other-modules: Worker.PkgIndex

  -- non-locals
  build-depends:
    , concurrent-extra     ^>= 0.7.0.10
    , config-value         ^>= 0.6
    , servant-snap         ^>= 0.8.4
    , snap                 ^>= 1.1.2.0
    , snap-core            ^>= 1.0.4.0
    , snap-server          ^>= 1.1.1.1
    , unix                 ^>= 2.7.2

-- mostly for testing
executable matrix-worker-client
  import: defaults-exe

  main-is: MainWorkerClient.hs

-- Single multi-command binary which orchestrates everything & provides WebUI
executable matrix-controller
  import: defaults-exe

  main-is: Controller/Main.hs

  other-modules:
      Controller.Api
      Controller.Badge
      Controller.Cli
      Controller.Config
      Controller.Compute
      Controller.Db
      Controller.Scheduler
      Controller.Types
      Controller.WebSvc
      Controller.Util

  -- non-locals
  build-depends:
    , SafeSemaphore        ^>= 0.10.1
    , attoparsec           ^>= 0.13.2.2
    , base-encoding        ^>= 0.1.0.0
    , brotli               ^>= 0.0.0.0
    , brotli-streams       ^>= 0.0.0.0
    , config-schema        ^>= 0.5.0
    , cryptohash-md5       ^>= 0.11.100.1
    , optparse-generic     ^>= 1.3
    , resource-pool        ^>= 0.2.3.2
    , servant-snap         ^>= 0.8.4
    , servant-swagger      ^>= 1.1.4
    , snap                 ^>= 1.1.2.0
    , snap-core            ^>= 1.0.4.0
    , snap-server          ^>= 1.1.1.1
    , unordered-containers ^>= 0.2.7.1
    , zlib                 ^>= 0.6.2
