cabal-version:       2.4
name:                matrix-ui
version:             0.3.0.0

synopsis:            Hackage Matrix UI
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Network
extra-source-files:  ChangeLog.md
tested-with:         GHC == 8.0.2

executable matrix-ui
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs

  mixins: base hiding (Prelude)

  cpp-options: -DGHCJS_BROWSER

  build-depends:
    , Prelude    ^>= 0.1.0.0
    , aeson      ^>= 1.1.2
    , base       ^>= 4.9.1.0
    , containers ^>= 0.5.7.1
    , lens       ^>= 4.16.1
    , reflex     ^>= 0.5
    , reflex-dom ^>= 0.4
    , text       ^>= 1.2.2.2
