cabal-version:       2.4
name:                matrix-ui
version:             0.3.0.0

synopsis:            Hackage Matrix UI
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Network
extra-source-files:  ChangeLog.md
tested-with:         GHCJS == 8.0.*, GHCJS == 8.4.*

executable matrix-ui
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: API
               , PkgId

  mixins: base hiding (Prelude)

  cpp-options: -DGHCJS_BROWSER
  ghc-options: -Wall

  build-depends:
    , Prelude                   ^>= 0.1.0.0
    , aeson                     ^>= 1.2.4
    , base                      ^>= 4.9.1.0 || ^>= 4.11.1.0
    , containers                ^>= 0.5.7.1
    , lens                      ^>= 4.16
    , text                      ^>= 1.2.2.2
    , time                      ^>= 1.6.0.1 || ^>= 1.8.0.2
    , network-uri               ^>= 2.6.1.0
    , vector                    ^>= 0.12.0.1
    , uuid-types                ^>= 1.0.3
    , servant                   ^>= 0.13

    -- unreleased Git snapshots of deps; see cabal.project for provenance
    -- , ghcjs-dom-jsffi
    , reflex                    ^>= 0.5
    , reflex-dom                ^>= 0.4
    , reflex-dom-core           ^>= 0.4
    , reflex-dom-contrib        ^>= 0.5.1.0
--  , reflex-dom-nested-routing  == 0.0.3
    , servant-reflex            ^>= 0.3.3
